--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 dependencies {
     compile 'com.codeborne:selenide:5.3.1'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.26'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.26'
     compile("org.junit.jupiter:junit-jupiter-api:5.4.2")
     compile("org.junit.jupiter:junit-jupiter-params:5.4.2")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.4.2")
